--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                     <title>About Sandeep</title>
                 </head>
                     <body>
-                        <table cellspacing="20"><td><img src="C:\Users\ASUS\Downloads\Sandeep passport photo-modified (1).png" so alt="Sandeep's Image "></td>
+                        <table cellspacing="20"><td><img src="Sandeep passport photo-modified (2).png" so alt="Sandeep's Image "></td>
                         <td> <h3><b>Sandeep Chakraborty</b>  </h3>
                             <h1><p><em>A commerce student with <strong> Big Dreams.</strong>  </em ></p></h1>
                             <hr >
