--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <hr>
                     <strong><a href="Educational qualification.html">Educational Qualification</a></strong> 
                                     <hr>                   
-                    <h3><b><a href="Hobbies.html">My Hobbie</a>s</b></h3>
+                    <h3><b><a href="Hobbies.html">My Hobbies</a></b></h3>
                         
                         <hr>
                         <h3><strong><a href="Books i have read.html">Books i have read</a></strong></h3>
